# jira-gitlab-validating-webhook

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  readme.md
src/: gitlab.rs  main.rs
