[package]
name = "jira-gitlab-validating-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
axum-macros = "0.3.7"
hyper = "0.14.27"
jira_query = "1.2.1"
once_cell = "1.18.0"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.1", features = ["auth", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
